assets/css/main.css
/*! normalize.css v3.0.1 | MIT License | git.io/normalize */
html {
  font-family: sans-serif;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0;
}

.sponsors {
  text-align: center;
  padding-top: 30px;
}

.sponsorlist {
  padding-top: 30px;
  text-align: center;

}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
nav,
section,
summary {
  display: block;
}

audio,
canvas,
progress,
video {
  display: inline-block;
  vertical-align: baseline;
}

audio:not([controls]) {
  display: none;
  height: 0;
}

[hidden],
template {
  display: none;
}

a {
  background: transparent;
}

a:active,
a:hover {
  outline: 0;
}

abbr[title] {
  border-bottom: 1px dotted;
}

b,
strong {
  font-weight: bold;
}

dfn {
  font-style: italic;
}

h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

mark {
  background: #ff0;
  color: #000;
}

small {
  font-size: 80%;
}

sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sup {
  top: -0.5em;
}

sub {
  bottom: -0.25em;
}

img {
  border: 0;
}

svg:not(:root) {
  overflow: hidden;
}

figure {
  margin: 1em 40px;
}

hr {
  -webkit-box-sizing: content-box;
          box-sizing: content-box;
  height: 0;
}

pre {
  overflow: auto;
}

code,
kbd,
pre,
samp {
  font-family: monospace, monospace;
  font-size: 1em;
}

button,
input,
optgroup,
select,
textarea {
  color: inherit;
  font: inherit;
  margin: 0;
}

button {
  overflow: visible;
}

button,
select {
  text-transform: none;
}

button,
html input[type="button"], input[type="reset"],
input[type="submit"] {
  -webkit-appearance: button;
  cursor: pointer;
}

button[disabled],
html input[disabled] {
  cursor: default;
}

button::-moz-focus-inner,
input::-moz-focus-inner {
  border: 0;
  padding: 0;
}

input {
  line-height: normal;
}

input[type="checkbox"],
input[type="radio"] {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  padding: 0;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

input[type="search"] {
  -webkit-appearance: textfield;
  -webkit-box-sizing: content-box;
  box-sizing: content-box;
}

input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

fieldset {
  border: 1px solid #c0c0c0;
  margin: 0 2px;
  padding: 0.35em 0.625em 0.75em;
}

legend {
  border: 0;
  padding: 0;
}

textarea {
  overflow: auto;
}

optgroup {
  font-weight: bold;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

td,
th {
  padding: 0;
}

.animate {
  -webkit-transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
          transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
}

.scaleIn {
  -webkit-transform: scale(0);
      -ms-transform: scale(0);
          transform: scale(0);
}

/* Setup */
html {
  /* Change default typefaces here */
  font-family: "Source Serif Pro", serif;
  font-size: 137.5%;
  font-weight: 400;
  color: rgba(0, 0, 0, 0.8);
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  font-feature-settings: "kern" 1;
  -webkit-font-feature-settings: "kern";
  -moz-font-feature-settings: "kern";
  -moz-font-feature-settings: "kern=1";
}

/* Copy & Lists */
p {
  line-height: 1.5rem;
  letter-spacing: .01rem;
  margin-top: 1.5rem;
  margin-bottom: 0;
}

p.u--startsWithDoubleQuote {
  text-indent: -0.43em;
}

ul,
ol {
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
  padding-left: 22px;
}

ul li,
ol li {
  line-height: 1.0rem;
}

ul ul,
ul ol,
ol ul,
ol ol {
  margin-top: 0;
  margin-bottom: 0;
}

blockquote {
  line-height: 1.5rem;
  font-style: italic;
  padding-left: 25px;
  margin-left: -29px;
  border-left: 4px solid #222;
}

@media (max-width: 767px) {
  blockquote {
    padding-left: 15px;
    margin-left: -19px;
  }
}

blockquote.u--startsWithDoubleQuote {
  text-indent: -0.40em;
}

blockquote.largeQuote {
  line-height: 1.4;
  text-align: center;
  font-size: 1.777rem;
  margin: 1.5rem -160px 0;
  padding-left: 0;
  border-left: 0;
}

@media (max-width: 767px) {
  blockquote.largeQuote {
    margin: 1.5rem 0 0;
    font-size: 1.333rem;
    padding-left: 0;
  }
}

blockquote.largeQuote a {
  background-position: 0 42px;
}

/* Headings */
h1,
h2,
h3,
h4,
h5,
h6 {
  /* Change heading typefaces here */
  font-family: "PT Sans", sans-serif;
  margin-top: 1.5rem;
  margin-bottom: 0;
  line-height: 1.5rem;
  letter-spacing: -0.02em;
}

h1 {
  font-size: 3.999rem;
  line-height: 4.5rem;
  margin-top: 3rem;
}

h2 {
  font-family: "Roboto", sans-serif;
  font-size: 2.666rem;
  line-height: 3rem;
  margin-top: 3rem;
  font-weight: 300;
}

h3 {
  /* font-size: 1.33 * $scale * 1rem;
  line-height: 1.34 * $leading;
  margin-top: 1.33 * $leading; */
  font-size: 1.777rem;
  line-height: 2.18rem;
  margin-top: 1.7rem;
}

h4 {
  font-size: 1.333rem;
}

h5 {
  font-size: 1.0664rem;
}

h6 {
  font-size: 0.9331rem;
}

a {
  color: rgba(0, 0, 0, 0.8);
  text-decoration: none;
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(75%, transparent), color-stop(75%, rgba(0, 0, 0, 0.8)));
  background-image: linear-gradient(to bottom, transparent 75%, rgba(0, 0, 0, 0.8) 75%);
  background-repeat: repeat-x;
  background-position: 0 22px;
  background-size: 2px 2px;
}

a:hover {
  color: rgba(0, 0, 0, 0.8);
}

/* Tables */
table {
  margin-top: 1.5rem;
  border-spacing: 0px;
  border-collapse: collapse;
}

td,
th {
  padding: 0;
  line-height: 33px;
}

/* Code blocks */
code {
  vertical-align: bottom;
}

hr {
  border-color: #d5d5d5;
  padding: 0;
  border-top: 0;
  border-left: 0;
  border-right: 0;
  margin: 1.5rem 0;
}

/* Leading paragraph text */
.lead {
  font-size: 1.333rem;
}

/* Hug a the block above you */
.hug {
  margin-top: 0;
}

.container--content {
  max-width: 700px;
}
/* ... */

